ignoring brain and fitness files

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 downloads/
 # sensor data
 data/
-
+# brain and fitness files
+*.nndf
+fitness*.txt
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
